Release AI Fabric Framework 0.3.0 (#7)
* Integrate Spring AI provider layer for release

* Harden Spring AI and vector release readiness

* Migrate intent JSON parsing to structured support

* Add Spring AI MCP action bridge

* docs

* Fix real app smoke readiness

* Expand real app release coverage

* docs: add framework capability smoke plan

* full testing suite

* Implement P1 real-app smoke lane

* Complete P1 relay hardening

* Add P1 support action bot smoke

* Add P1 chat read action smoke

* Add P1 anonymous chat action smoke

* Add P1 chat suggestions smoke

* Document P1 curated pack verification

* Document P1 runtime auth governance proof

* Clarify P1 runtime token boundary

* Fix RealAPI action test proofs

* Complete P2 provider verification hardening

* Create 0.3.0.md

* Prepare 0.3.0 release

* Upgrade Central publishing plugin

* Harden 0.3.x release follow-up